# waveweaver

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
src/waveweaver/: __init__.py  app.py
src/waveweaver/config/: __init__.py  settings.py
src/waveweaver/core/: __init__.py  models.py  stem_separator.py
src/waveweaver/gui/: __init__.py  main_window.py
src/waveweaver/gui/components/: __init__.py  audio_section.py  model_selection.py  output_section.py  progress_section.py  stem_selection.py
src/waveweaver/gui/styles/: __init__.py  theme.py
src/waveweaver/utils/: __init__.py  file_handler.py  helpers.py
tests/: conftest.py
tests/test_core/: test_stem_separator.py
tests/test_gui/: test_main_window.py
tests/test_utils/: test_file_handler.py  test_helpers.py
